oslib_inc = include_directories('include')
oslib_src = files(['src/chmboxes.c',
              	   'src/chmemcore.c',
              	   'src/chmemheaps.c',
              	   'src/chmempools.c',
              	   'src/chpipes.c',
              	   'src/chobjcaches.c',
              	   'src/chdelegates.c',
              	   'src/chfactory.c'])
